Configura a implementação do Spring Hateoas