@@ -5,7 +5,6 @@ import java.beans.PropertyDescriptor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -26,7 +25,7 @@ public class FieldUtils {
         List<Field> fields = new ArrayList<>();
 
         for (Class<?> t = type; t != null; t = t.getSuperclass()) {
-            fields.addAll(Arrays.asList(t.getDeclaredFields()));
+            fields.addAll(List.of(t.getDeclaredFields()));
         }
 
         return fields;
